# i3tmsg

./: Cargo.toml  README.md
src/: lib.rs  main.rs
