[package]
name = "i3tmsg"
version = "1.0.0"
edition = "2021"
rust-version = "1.67.1"
readme = "README.md"
repository = "https://github.com/Ifnir/i3tmsg.git"
keywords = ["i3", "eww", "rice"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.152", features = ["derive"]}
serde_json = "1.0.93"